fix: overlapping issue

--- a/new_lineage_panel/src/styles.module.scss
+++ b/new_lineage_panel/src/styles.module.scss
@@ -447,7 +447,7 @@ $size: 1.2em;
 
 .op_type_text {
   position: absolute;
-  left: 3.6rem;
+  left: 10.6rem;
   color: var(--primary-accent);
   height: 3.2rem;
   display: flex;
